fix margin spacing

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 /* Media Query: Tablet or Smaller */
 @media screen and (max-width: 1000px) {
     .quote-container {
-        margin: auto 10px;
+        margin: 10px;
     }
 
     .quote-text {
